--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
-## https://github.com/github/gitignore/blob/main/Python.gitignore
-# Byte-compiled / optimized / DLL files
 __pycache__/
-
-# Jupyter Notebook
 .ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
+*.nc
+*.pdf
+*.png
+*.zip
 
 ## Repo specific
 data/
